--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="saludo">Bienvenido a Todo Deportes</string>
     <string name="descripcionApp">Aquí podrás alquilar las mejores canchas!</string>
     <string name="version">0.3.1</string>
+    <string name="autor">by: Hernán Velásquez</string>
 
     <!--ACTIVITY MAIN-->
 
