--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,20 @@
     <string name="action_settings">Configurar</string>
     <string name="saludo">Bienvenido a Todo Deportes</string>
     <string name="descripcionApp">Aquí podrás alquilar las mejores canchas!</string>
-    <string name="version">0.3.1</string>
+    <string name="version">v: 0.3.1</string>
     <string name="autor">by: Hernán Velásquez</string>
 
     <!--ACTIVITY MAIN-->
+    <string name="iniciaSeccion">Iniciar Sección</string>
+    <string name="registrarse">Registrarse</string>
+
+    <!--
+    <string name="XXX">XXX</string>
+    <string name="XXX">XXX</string>
+    <string name="XXX">XXX</string>
+    <string name="XXX">XXX</string>
+    <string name="XXX">XXX</string>
+    <string name="XXX">XXX</string>
+    -->
 
 </resources>
