Se agregan nuevos String y se mejora la UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,13 @@
     <string name="iniciaSeccion">Iniciar Sección</string>
     <string name="registrarse">Registrarse</string>
 
+    <!--MainActivity-->
+    <string name="vistaAdministrador">Vista Administrador</string>
+    <string name="vistaUsuario">Vista Usuario</string>
+
+
     <!--
-    <string name="XXX">XXX</string>
-    <string name="XXX">XXX</string>
-    <string name="XXX">XXX</string>
+     <string name="XXX">XXX</string>
     <string name="XXX">XXX</string>
     <string name="XXX">XXX</string>
     <string name="XXX">XXX</string>
