--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,14 @@
     </string-array>
 
     <!--RegistrarUsuarioActivity-->
-    <string name="title_RegistrarUsuarioActivity">Registrar Usuario</string>
+    <string name="title_RegistrarUsuarioActivity">Nuevo Usuario</string>
+    <string name="campoNombres">Nombres</string>
+    <string name="campoApellido1">Primer Apellido</string>
+    <string name="campoApellido2">Segundo Apellido</string>
+    <string name="campoIdentificacion">Identificación</string>
+    <string name="campoDireccion">Dirección</string>
+    <string name="campoTelefono">Teléfono</string>
+    <string name="campoEmail">Correo Electrónico</string>
 
 
 </resources>
