Correción URL servicio listar canchas Adición de Activity padre a listar canchas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     -->
 
     <string name="title_activity_registrar_cancha">Nueva Cancha</string>
+    <string name="title_activity_listar_cancha">Canchas</string>
     <string name="hello_world">Hello world!</string>
     <string name="nombre_cancha">Nombre de la cancha</string>
     <string name="titleRegistroCancha">Registrar Cancha</string>
