--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="nombre_cancha">Nombre de la cancha</string>
     <string name="titleRegistroCancha">Registrar Cancha</string>
-    <string name="saveCancha">Guardar Cancha</string>
+    <string name="saveCancha">Guardar</string>
+    <string name="update_canchas">Actualizar</string>
     <string name="hint_address">Dirección</string>
 
     <string-array name="arrTipos">
